--- a/portal-frontend/src/app/features/review-application/review-zoning/review-zoning.component.html
+++ b/portal-frontend/src/app/features/review-application/review-zoning/review-zoning.component.html
@@ -29,12 +29,23 @@
         <mat-form-field class="input" appearance="outline">
           <input id="bylaw-name" matInput placeholder="Type zoning bylaw name" formControlName="zoningBylawName" />
         </mat-form-field>
+        <div *ngIf="zoningBylawName.invalid && (zoningBylawName.dirty || zoningBylawName.touched)" class="field-error">
+          <mat-icon>warning</mat-icon>
+          <div *ngIf="zoningBylawName.errors?.['required']">This field is required</div>
+        </div>
       </div>
       <div>
         <label for="designation">Zoning Designation</label>
         <mat-form-field class="input" appearance="outline">
           <input id="designation" matInput placeholder="Type zoning designation" formControlName="zoningDesignation" />
         </mat-form-field>
+        <div
+          *ngIf="zoningDesignation.invalid && (zoningDesignation.dirty || zoningDesignation.touched)"
+          class="field-error"
+        >
+          <mat-icon>warning</mat-icon>
+          <div *ngIf="zoningDesignation.errors?.['required']">This field is required</div>
+        </div>
       </div>
       <div class="full-row">
         <label for="lot-size">Minimum Lot Size (hectares)</label>
@@ -46,6 +57,13 @@
             formControlName="zoningMinimumLotSize"
           />
         </mat-form-field>
+        <div
+          *ngIf="zoningMinimumLotSize.invalid && (zoningMinimumLotSize.dirty || zoningMinimumLotSize.touched)"
+          class="field-error"
+        >
+          <mat-icon>warning</mat-icon>
+          <div *ngIf="zoningMinimumLotSize.errors?.['required']">This field is required</div>
+        </div>
       </div>
       <div class="full-row">
         <label for="is-consistent">Is this proposal consistent with the current zoning designation?</label>
