--- a/portal-frontend/src/app/features/review-application/review-submit-fng/review-submit-fng.component.html
+++ b/portal-frontend/src/app/features/review-application/review-submit-fng/review-submit-fng.component.html
@@ -58,7 +58,7 @@
           </div>
         </div>
         <div class="edit-button">
-          <button mat-flat-button (click)="onEditSection(0)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(0)" color="accent">Edit Section</button>
         </div>
       </div>
     </section>
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div class="edit-button">
-          <button mat-flat-button (click)="onEditSection(1)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(1)" color="accent">Edit Section</button>
         </div>
       </div>
     </section>
@@ -101,7 +101,7 @@
           </div>
         </div>
         <div class="edit-button">
-          <button mat-flat-button (click)="onEditSection(2)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(2)" color="accent">Edit Section</button>
         </div>
       </div>
     </section>
@@ -165,7 +165,7 @@
           </div>
         </div>
         <div class="edit-button">
-          <button mat-flat-button (click)="onEditSection(0)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(0)" color="accent">Edit Section</button>
         </div>
       </div>
     </mat-expansion-panel>
@@ -184,7 +184,7 @@
           </div>
         </div>
         <div class="edit-button">
-          <button mat-flat-button (click)="onEditSection(1)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(1)" color="accent">Edit Section</button>
         </div>
       </div>
     </mat-expansion-panel>
@@ -212,7 +212,7 @@
           </div>
         </div>
         <div class="edit-button">
-          <button mat-flat-button (click)="onEditSection(2)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(2)" color="accent">Edit Section</button>
         </div>
       </div>
     </mat-expansion-panel>
