--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
@@ -47,4 +47,4 @@
 >
   Upload File
 </button>
-<app-validation-error *ngIf="isRequired && !uploadedFiles.length">This file upload is required</app-validation-error>
+<app-validation-error *ngIf="isRequired && showErrors && !uploadedFiles.length">This file upload is required</app-validation-error>
