--- a/portal-frontend/src/app/features/review-application/review-submit/review-submit.component.html
+++ b/portal-frontend/src/app/features/review-application/review-submit/review-submit.component.html
@@ -58,7 +58,7 @@
           </div>
         </div>
         <div class="edit-button">
-          <button mat-flat-button (click)="onEditSection(0)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(0)" color="accent">Edit Section</button>
         </div>
       </div>
     </section>
@@ -98,7 +98,7 @@
           </div>
         </div>
         <div class="edit-button">
-          <button mat-flat-button (click)="onEditSection(1)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(1)" color="accent">Edit Section</button>
         </div>
       </div>
     </section>
@@ -157,7 +157,7 @@
           </div>
         </div>
         <div class="edit-button">
-          <button mat-flat-button (click)="onEditSection(2)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(2)" color="accent">Edit Section</button>
         </div>
       </div>
     </section>
@@ -194,7 +194,7 @@
           *ngIf="_applicationReview.isOCPDesignation !== null || _applicationReview.isSubjectToZoning !== null"
           class="edit-button"
         >
-          <button mat-flat-button (click)="onEditSection(3)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(3)" color="accent">Edit Section</button>
         </div>
       </div>
     </section>
@@ -240,7 +240,7 @@
           </div>
         </div>
         <div class="edit-button">
-          <button mat-flat-button (click)="onEditSection(4)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(4)" color="accent">Edit Section</button>
         </div>
       </div>
     </section>
@@ -304,7 +304,7 @@
           </div>
         </div>
         <div class="edit-button">
-          <button mat-flat-button (click)="onEditSection(0)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(0)" color="accent">Edit Section</button>
         </div>
       </div>
     </mat-expansion-panel>
@@ -346,7 +346,7 @@
           </div>
         </div>
         <div class="edit-button">
-          <button mat-flat-button (click)="onEditSection(1)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(1)" color="accent">Edit Section</button>
         </div>
       </div>
     </mat-expansion-panel>
@@ -399,7 +399,7 @@
           </div>
         </div>
         <div class="edit-button">
-          <button mat-flat-button (click)="onEditSection(2)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(2)" color="accent">Edit Section</button>
         </div>
       </div>
     </mat-expansion-panel>
@@ -438,7 +438,7 @@
           *ngIf="_applicationReview.isOCPDesignation !== null || _applicationReview.isSubjectToZoning !== null"
           class="edit-button"
         >
-          <button mat-flat-button (click)="onEditSection(3)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(3)" color="accent">Edit Section</button>
         </div>
       </div>
     </mat-expansion-panel>
@@ -486,7 +486,7 @@
           </div>
         </div>
         <div class="edit-button">
-          <button mat-flat-button (click)="onEditSection(4)" color="accent">Edit Section</button>
+          <button mat-flat-button (click)="onNavigateToStep(4)" color="accent">Edit Section</button>
         </div>
       </div>
     </mat-expansion-panel>
