--- a/portal-frontend/src/app/features/edit-application/edit-application.component.scss
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.scss
@@ -229,11 +229,11 @@
 
     @media screen and (min-width: $desktopBreakpoint) {
       & {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
       }
 
       .full-row {
-        grid-column: 1/4;
+        grid-column: 1/3;
       }
     }
   }
@@ -244,16 +244,6 @@
 
     .mat-radio-button {
       margin-right: rem(12);
-    }
-  }
-
-  .search-buttons {
-    display: flex;
-    align-items: center;
-    justify-content: left;
-
-    button {
-      margin: 0 rem(16) 0 0 !important;
     }
   }
 
