--- a/portal-frontend/src/app/features/review-application/review-ocp/review-ocp.component.html
+++ b/portal-frontend/src/app/features/review-application/review-ocp/review-ocp.component.html
@@ -23,6 +23,10 @@
           <mat-button-toggle value="true">Yes</mat-button-toggle>
           <mat-button-toggle value="false">No</mat-button-toggle>
         </mat-button-toggle-group>
+        <div *ngIf="isOCPDesignation.getRawValue() === null && showErrors" class="field-error">
+          <mat-icon>warning</mat-icon>
+          <div>This field is required</div>
+        </div>
       </div>
       <div>
         <label for="bylaw-name">OCP Bylaw Name</label>
@@ -50,6 +54,13 @@
           <mat-button-toggle value="true">Yes</mat-button-toggle>
           <mat-button-toggle value="false">No</mat-button-toggle>
         </mat-button-toggle-group>
+        <div
+          *ngIf="isOCPConsistent.getRawValue() === null && showErrors && !isOCPConsistent.disabled"
+          class="field-error"
+        >
+          <mat-icon>warning</mat-icon>
+          <div>This field is required</div>
+        </div>
       </div>
     </div>
   </form>
