--- a/portal-frontend/src/app/features/review-application/review-attachments/review-attachments.component.html
+++ b/portal-frontend/src/app/features/review-application/review-attachments/review-attachments.component.html
@@ -19,6 +19,8 @@
         (uploadFiles)="attachFile($event, documentTypes.RESOLUTION_DOCUMENT)"
         (deleteFile)="deleteFile($event)"
         (openFile)="openFile($event)"
+        [isRequired]="true"
+        [showErrors]="showErrors"
       ></app-file-drag-drop>
     </section>
     <section *ngIf="!isFirstNationGovernment && showMandatoryUploads">
@@ -29,6 +31,8 @@
         (uploadFiles)="attachFile($event, documentTypes.STAFF_REPORT)"
         (deleteFile)="deleteFile($event)"
         (openFile)="openFile($event)"
+        [isRequired]="true"
+        [showErrors]="showErrors"
       ></app-file-drag-drop>
     </section>
     <section>
