--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.html
@@ -16,9 +16,7 @@
         REMOVE
       </button>
     </div>
-    <div class='error-message' *ngIf="!!file.errorMessage">
-      <mat-icon>warning</mat-icon> {{ file.errorMessage }}
-    </div>
+    <div class="error-message" *ngIf="!!file.errorMessage"><mat-icon>warning</mat-icon> {{ file.errorMessage }}</div>
   </ng-container>
 </div>
 <div
@@ -49,3 +47,4 @@
 >
   Upload File
 </button>
+<app-validation-error *ngIf="isRequired && showErrors && !uploadedFiles.length">This file upload is required</app-validation-error>
