--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-owners/parcel-owners.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-owners/parcel-owners.component.html
@@ -21,8 +21,8 @@
     </ng-container>
 
     <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef>Type</th>
-      <td mat-cell *matCellDef="let element">{{ element.type.label }}</td>
+      <th mat-header-cell [hidden]='isCrown' *matHeaderCellDef>Type</th>
+      <td mat-cell [hidden]='isCrown' *matCellDef="let element">{{ element.type.label }}</td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
