validation error on certificate of title upload

--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.html
@@ -158,6 +158,8 @@
       (deleteFile)="deleteFile($event)"
       (openFile)="openFile($event)"
       (beforeFileUploadOpened)="beforeFileUploadOpened()"
+      [showErrors]="showErrors"
+      [isRequired]="true"
     ></app-file-drag-drop>
   </div>
 
