--- a/portal-frontend/src/app/shared/validation-error/validation-error.component.html
+++ b/portal-frontend/src/app/shared/validation-error/validation-error.component.html
@@ -1,4 +1,4 @@
-<div class="subtext error">
+<div class="{{ errorClass }}">
   <mat-icon>warning</mat-icon>
   <div class="error-description">
     <ng-content></ng-content>
