authorization letter required error

--- a/portal-frontend/src/app/features/edit-application/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/edit-application/primary-contact/primary-contact.component.html
@@ -121,6 +121,8 @@
       [uploadedFiles]="files"
       (uploadFiles)="onAttachFile($event)"
       (deleteFile)="onRemoveFile($event)"
+      [showErrors]="showErrors"
+      [isRequired]="needsAuthorizationLetter || selectedThirdPartyAgent"
     ></app-file-drag-drop>
   </div>
 </section>
