corporate summary required

--- a/portal-frontend/src/app/features/edit-application/parcel-details/application-owner-dialog/application-owner-dialog.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/application-owner-dialog/application-owner-dialog.component.html
@@ -33,6 +33,8 @@
           (deleteFile)="removeCorporateSummary()"
           (openFile)="openCorporateSummary()"
           id="fileUpload"
+          [showErrors]="false"
+          [isRequired]="true"
         ></app-file-drag-drop>
         <mat-form-field style="display: none">
           <input id="corporateSummary" matInput formControlName="corporateSummary" />
