--- a/portal-frontend/src/app/features/edit-application/parcel-details/application-owner-dialog/application-owner-dialog.component.scss
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/application-owner-dialog/application-owner-dialog.component.scss
@@ -6,11 +6,13 @@
   }
 }
 
-.field-error {
-  color: $error-color;
-  font-size: rem(15);
-  font-weight: 700;
-  display: flex;
-  align-items: center;
-  margin-top: rem(4);
+:host::ng-deep {
+  .field-error {
+    color: $error-color;
+    font-size: rem(15);
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    margin-top: rem(4);
+  }
 }
