--- a/portal-frontend/src/app/features/application-details/application-details.component.scss
+++ b/portal-frontend/src/app/features/application-details/application-details.component.scss
@@ -72,13 +72,13 @@
 
   .adjacent-parcels {
     display: grid;
-    grid-template-columns: max-content max-content max-content max-content max-content;
+    grid-template-columns: max-content max-content max-content;
     overflow-x: auto;
     grid-column-gap: rem(36);
     grid-row-gap: rem(12);
 
     .full-width {
-      grid-column: 1/5;
+      grid-column: 1/4;
     }
   }
 
