--- a/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
+++ b/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
@@ -33,59 +33,14 @@
         <mat-button-toggle value="true">Yes</mat-button-toggle>
         <mat-button-toggle value="false">No</mat-button-toggle>
       </mat-button-toggle-group>
-      <div *ngIf="hasOtherParcelsInCommunity.invalid && (hasOtherParcelsInCommunity.dirty || hasOtherParcelsInCommunity.touched)" class="field-error">
+      <div
+        *ngIf="
+          hasOtherParcelsInCommunity.invalid && (hasOtherParcelsInCommunity.dirty || hasOtherParcelsInCommunity.touched)
+        "
+        class="field-error"
+      >
         <mat-icon>warning</mat-icon>
         <div *ngIf="hasOtherParcelsInCommunity.errors?.['required']">This field is required</div>
-      </div>
-    </div>
-
-    <div class="full-row">
-      <mat-expansion-panel
-        *ngFor="let parcel of otherParcels; let parcelInd = index"
-        [expanded]="otherParcels.length < 2 || (newParcelAdded && parcelInd === otherParcels.length - 1)"
-      >
-        <mat-expansion-panel-header>
-          <mat-panel-title> Parcel #{{ parcelInd + 1 }} Details</mat-panel-title>
-        </mat-expansion-panel-header>
-        <app-parcel-entry
-          [parcel]="parcel"
-          [$owners]="$owners"
-          [fileId]="fileId"
-          [enableOwners]="true"
-          [enableCertificateOfTitleUpload]="false"
-          [enableUserSignOff]="false"
-          [enableAddNewOwner]="false"
-          [showErrors]="showErrors"
-          [disabled]="formDisabled"
-          (onFormGroupChange)="onParcelFormChange($event)"
-        ></app-parcel-entry>
-        <div>
-          <div class="flex-evenly-wrap parcel-buttons-wrappers">
-            <button
-              class="margin-top-1-half"
-              mat-stroked-button
-              color="primary"
-              (click)="onSave()"
-              [disabled]="formDisabled"
-            >
-              Save Parcel #{{ parcelInd + 1 }} Details
-            </button>
-            <button
-              class="margin-top-1-half"
-              *ngIf="otherParcels.length > 1"
-              mat-stroked-button
-              color="accent"
-              (click)="onDelete(parcel.uuid, parcelInd + 1)"
-            >
-              Delete Parcel #{{ parcelInd + 1 }} Details
-            </button>
-          </div>
-        </div>
-      </mat-expansion-panel>
-      <div>
-        <button mat-stroked-button color="primary" [disabled]="formDisabled" (click)="onAddParcel()">
-          Add another parcel
-        </button>
       </div>
     </div>
     <div class="full-row">
