--- a/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
+++ b/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
@@ -33,8 +33,16 @@
         <mat-button-toggle value="true">Yes</mat-button-toggle>
         <mat-button-toggle value="false">No</mat-button-toggle>
       </mat-button-toggle-group>
+      <div
+        *ngIf="
+          hasOtherParcelsInCommunity.invalid && (hasOtherParcelsInCommunity.dirty || hasOtherParcelsInCommunity.touched)
+        "
+        class="field-error"
+      >
+        <mat-icon>warning</mat-icon>
+        <div *ngIf="hasOtherParcelsInCommunity.errors?.['required']">This field is required</div>
+      </div>
     </div>
-
     <div class="full-row">
       <mat-expansion-panel
         *ngFor="let parcel of otherParcels; let parcelInd = index"
