--- a/portal-frontend/src/app/features/application-details/parcel/parcel.component.html
+++ b/portal-frontend/src/app/features/application-details/parcel/parcel.component.html
@@ -2,7 +2,10 @@
   {{ pageTitle }}
 </h3>
 <div class="review-table">
-  <app-no-data [showRequired]="false" *ngIf="parcels.length === 0"></app-no-data>
+  <app-no-data
+    [showRequired]="parcelType === PARCEL_TYPES.OTHER && application.hasOtherParcelsInCommunity === null"
+    *ngIf="parcels.length === 0"
+  ></app-no-data>
   <ng-container *ngFor="let parcel of parcels; let parcelInd = index">
     <div class="full-width flex-space-between-wrap">
       <h4>Parcel {{ parcelInd + 1 }}: Parcel and Owner Information</h4>
@@ -93,6 +96,13 @@
       <div class="full-width">
         <app-no-data [showRequired]="showErrors" *ngIf="parcel.owners.length === 0"></app-no-data>
       </div>
+    </div>
+    <div class="subheading2 grid-1">
+      I confirm that the owner information provided above matches the current Certificate of Title
+    </div>
+    <div class="grid-double">
+      <span *ngIf="parcel.isConfirmedByApplicant">Yes</span>
+      <app-no-data [showRequired]="showErrors" *ngIf="!parcel.isConfirmedByApplicant"></app-no-data>
     </div>
     <div *ngIf="showEdit" class="edit-button tablet-hidden">
       <button mat-flat-button color="accent" (click)="onEditParcelClick(parcel.uuid)">
