--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.html
@@ -14,6 +14,10 @@
       <mat-button-toggle value="SMPL">Fee Simple</mat-button-toggle>
       <mat-button-toggle value="CRWN">Crown</mat-button-toggle>
     </mat-button-toggle-group>
+    <div *ngIf="parcelType.invalid && (parcelType.dirty || parcelType.touched)" class="field-error">
+      <mat-icon>warning</mat-icon>
+      <div *ngIf="parcelType.errors?.['required']">This field is required</div>
+    </div>
   </div>
 
   <h5>Parcel Lookup</h5>
@@ -133,6 +137,10 @@
           <mat-button-toggle value="true">Yes</mat-button-toggle>
           <mat-button-toggle value="false">No</mat-button-toggle>
         </mat-button-toggle-group>
+        <div *ngIf="isFarm.invalid && (isFarm.dirty || isFarm.touched)" class="field-error">
+          <mat-icon>warning</mat-icon>
+          <div *ngIf="isFarm.errors?.['required']">This field is required</div>
+        </div>
       </div>
     </div>
   </div>
@@ -146,6 +154,8 @@
       (deleteFile)="deleteFile($event)"
       (openFile)="openFile($event)"
       (beforeFileUploadOpened)="beforeFileUploadOpened()"
+      [showErrors]="showErrors"
+      [isRequired]="true"
     ></app-file-drag-drop>
   </div>
 
@@ -184,7 +194,7 @@
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
-      <div *ngIf="ownerInput.errors && ownerInput.errors['required']" class="field-error">
+      <div *ngIf="ownerInput.errors && ownerInput.errors['required'] && !ownerInput.disabled" class="field-error">
         <mat-icon>warning</mat-icon>
         <div *ngIf="ownerInput.errors?.['required']">This field is required</div>
       </div>
@@ -281,8 +291,19 @@
       </div>
     </ng-container>
   </section>
-  <mat-checkbox *ngIf="enableUserSignOff" formControlName="isConfirmedByApplicant" class="container"
+  <mat-checkbox *ngIf="enableUserSignOff" formControlName="isConfirmedByApplicant" class="parcel-checkbox"
     >I confirm that the owner information provided above matches the current Certificate of Title. Mismatched
     information can cause significant delays to processing time.
   </mat-checkbox>
+  <div
+    *ngIf="
+      enableUserSignOff &&
+      isConfirmedByApplicant.invalid &&
+      (isConfirmedByApplicant.dirty || isConfirmedByApplicant.touched)
+    "
+    class="field-error"
+  >
+    <mat-icon>warning</mat-icon>
+    <div *ngIf="isConfirmedByApplicant.errors?.['required']">This field is required</div>
+  </div>
 </form>
